--- a/WaveFormGeneratorModule/WaveFormGeneratorModule.csproj
+++ b/WaveFormGeneratorModule/WaveFormGeneratorModule.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Argu" Version="5.1.0" />
     <PackageReference Include="CsvHelper" Version="7.1.0" />
     <PackageReference Include="Microsoft.Azure.Devices.Client" Version="1.6.0-preview-001" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.0.0-preview2-final" />
