--- a/WaveFormGeneratorModule/WaveFormGeneratorModule.csproj
+++ b/WaveFormGeneratorModule/WaveFormGeneratorModule.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="CsvHelper" Version="7.1.0" />
     <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="2.2.4" />
     <PackageReference Include="Microsoft.Azure.Devices.Client" Version="1.6.0-preview-001" />
+    <PackageReference Include="Microsoft.Azure.Devices.Provisioning.Service" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.0.0-preview2-final" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="2.0.0-preview2-final" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="2.0.0-preview2-final" />
