--- a/WaveFormGeneratorModule/WaveFormGeneratorModule.csproj
+++ b/WaveFormGeneratorModule/WaveFormGeneratorModule.csproj
@@ -3,6 +3,15 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.0</TargetFramework>
     <LangVersion>latest</LangVersion>
+    <!--- 
+    <AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
+    <PackageId>Microsoft.Azure.IoT.StableWaveFormGenerator</PackageId>
+    <Version>0.0.1</Version>
+    <Authors>archerpmorgan</Authors>
+    <Company>Microsoft</Company>
+    <PackageOutputPath>../StableWaveFormGenerator</PackageOutputPath>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    -->
   </PropertyGroup>
   
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|netcoreapp2.0|AnyCPU'">
